bug(fix): final padding image width on mobile

--- a/src/components/molecules/photoshoot/styles.sass
+++ b/src/components/molecules/photoshoot/styles.sass
@@ -10,6 +10,12 @@
   &.is-grabbing 
     cursor: grabbing
     cursor: -webkit-grabbing
+    
+.padding-image
+  width: 50px
+  max-width: 50px
+  height: 100% 
+
 
 .photoshoot
   height: 84vh
